--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -23,108 +23,12 @@
 		background-image:url(/images/bg.jpg);background-size:100% auto;}
 
 	</style>
+
+    <% include header.ejs %>
 </head>
 
 <body>
 
-	<!--####-.-.-.-NAV_BAR-.-.-.-.-#########################################################-->
-
-	<nav class="navbar navbar-inverse">
-	  <div class="container-fluid">
-	    <!-- display image -->
-	    <div class="navbar-header">
-				<a class="navbar-brand">
-	        <img alt="Brand" src="/images/logo.jpg">
-	      </a>
-
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-
-	    </div>
-
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <!--li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">Link</a></li-->
-
-					<!--######-.-.-.-Véhicules-.-.-.-###################################################################-->
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="fa fa-road"></span>  Vehicule <span class="caret"></span></h3></a>
-	          <ul class="dropdown-menu">
-	            <li><a href="#">Liste des vehicules</a></li>
-							<li role="separator" class="divider"></li>
-	            <li><a href="#">Recupérer</a></li>
-							<li role="separator" class="divider"></li>
-	            <li><a href="#">Transférer</a></li>
-	            <li role="separator" class="divider"></li>
-	            <li><a href="#">À préparer</a></li>
-	          </ul>
-	        </li>
-
-
-				<!--######-.-.-.-Process-.-.-.-###################################################################-->
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-refresh"></span>  Process <span class="caret"></span></h3></a>
-					<ul class="dropdown-menu">
-						<li><a href="/f44"> Préparer </a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="/fvehicule"> Réception </a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="/f44"> Check-in</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="#"> Tâches assignées </a></li>
-					</ul>
-				</li>
-
-
-			<!--######-.-.-.-Agence-.-.-.-###################################################################-->
-			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-home"></span>  Agence <span class="caret"></span></h3></a>
-				<ul class="dropdown-menu">
-					<li><a href="#"> Liste des agences </a></li>
-				</ul>
-			</li>
-
-
-		<!--######-.-.-.-Parkings-.-.-.-###################################################################-->
-		<li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-screenshot"></span>  Parking <span class="caret"></span></h3></a>
-			<ul class="dropdown-menu">
-				<li><a href="#"> Liste des parkings </a></li>
-			</ul>
-		</li>
-	</ul>
-
-	      <!--form class="navbar-form navbar-left" role="search">
-	        <div class="form-group">
-	          <input type="text" class="form-control" placeholder="Search">
-	        </div>
-	        <button type="submit" class="btn btn-default">Submit</button>
-	      </form-->
-
-	      <ul class="nav navbar-nav navbar-right">
-					<!--######-.-.-.-MON COMPTE -.-.-.-.###################################################################-->
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte <span class="caret"></span></h3></a>
-	          <ul class="dropdown-menu">
-
-	            <li><a href="mailto:email@admin.fr">Contacter l'administrateur</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="/logout">Se Décon"necter</a></li>
-
-	          </ul>
-	        </li>
-	      </ul>
-
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
-	<!--#######-.-.-.-.-.-FIN NAV BAR -.-.-.-.-######################################################-->
 
 
   <div class="container">
