--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,6 @@
 <!-- views/profile.ejs -->
 <!doctype html>
 <html>
-<head>
 	<head>
 		<% include header.ejs %>
 	</head>
@@ -100,9 +99,7 @@
 </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>	<script type="text/javascript">
-
-	</script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
