--- a/views/header.ejs
+++ b/views/header.ejs
@@ -69,7 +69,7 @@
 						<li role="separator" class="divider"></li>
 						<li><a href="/fvehicule"> Réception </a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="#"> Check-in</a></li>
+						<li><a href="/checkin"> Check-in</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#"> Tâches assignées </a></li>
 					</ul>
