--- a/views/header.ejs
+++ b/views/header.ejs
@@ -104,7 +104,7 @@
 	      <ul class="nav navbar-nav navbar-right">
 					<!--######-.-.-.-MON COMPTE -.-.-.-.###################################################################-->
 	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte</h3> <span class="caret"></span></a>
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte <span class="caret"></span></h3></a>
 	          <ul class="dropdown-menu">
 
 	            <li><a href="#">Contacter l'administrateur</a></li>
