--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -38,7 +38,7 @@
           <form role="form">
           <br>
 					<div class="text-center">
-						<h2><span class="glyphicon glyphicon-refresh"></span> Réception véhicule </h2>
+						<h2><span class="glyphicon glyphicon-ok"></span> Checkin </h2>
 						<br>
 
 					</div>
