--- a/views/post_data.ejs
+++ b/views/post_data.ejs
@@ -6,57 +6,59 @@
 
   <script  type="text/javascript" src="typeahead.min.js"></script>
   <script type="text/javascript">
-	$(document).ready(function(){
-			$('#myimmat').typeahead({
+	$(function(){
+			$('.typeahead').typeahead({
 					name: 'immat',
 					remote: 'http://localhost:8080/search?key=%QUERY',
-					limit: 10
 			});
 	});
 
   </script>
-
-	<style>
-
 </head>
 
 <body>
 
   <div class="container">
-    <div class="col-md-5 col-md-offset-4">
-        <div class="form-area">
-            <form role="form">
-            <br>
-              <div class="text-center">
+  <div class="col-md-4 col-md-offset-4">
+      <div class="form-area">
+          <form role="form">
+          <br>
+					<div class="text-center">
+						<h2><span class="glyphicon glyphicon-refresh"></span> Réception véhicule </h2>
+						<br>
 
-                <h1><span class="label label-info"> <span class="glyphicon glyphicon-refresh"></span> Fiche F44 </span> </h1>
+					</div>
 
-                <br>
+      			<div class="form-group">
+  						<input type="text" class="form-control" id="name" name="name" placeholder="Name" value=<%=user.username%> required>
+  					</div>
+  					<div class="form-group">
+  						<input type="number" class="form-control" id="mva" name="mva" placeholder="MVA" required>
+  					</div>
+  					<div class="form-group">
+  						<input type="text" class="typeahead form-control" id="myimmat" name="immat" placeholder="Immatriculation" required>
+  					</div>
+  					<div class="form-group">
+  						<input type="text" class="form-control" id="modele" name="modele" placeholder="Modèle" required>
+  					</div>
+            <div class="form-group">
+              <input type="number" class="form-control" id="num_contrat" name="num_contrat" placeholder="Numéro Contrat">
+            </div>
+            <div class="form-group">
+              <input type="number" class="form-control" id="km" name="km" placeholder="Km" required>
+            </div>
 
-              </div>
 
-              <div class="form-group">
-
-                <input id="myimmat" type="number" class="typeahead tt-query"  name="immat" placeholder="IMMAT" required>
-              </div>
-
-                <input type="number" class="form-control" id="mva" name="mva" placeholder="MVA" required>
-
-              <!--div class="form-group">
-                <input type="text" name="typeahead" class="typeahead tt-query" autocomplete="off" spellcheck="false" placeholder="tapez l'immat">
-
-              </div-->
-              <div class="form-group">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Nom opérateur" required>
-              </div>
+            <div class='form-group'>
+            <input type="text" size="10" value="" id="date-pick"/>
+            </div>
 
 
           <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
           </form>
+          </div>
       </div>
-  </div>
-  </div>
-
+      </div>
 
 <h1>This is my form</h1>
 <!-- local host to be changed?  -->
