--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -12,6 +12,8 @@
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
   <script>
   $(function() {
       $( "#date-picker" ).datepicker();
@@ -24,7 +26,7 @@
 
 	</style>
 
-    <% include header.ejs %>
+    <% include header_.ejs %>
 
 </head>
 
