--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -2,8 +2,8 @@
 <html>
 <head>
 
-	<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
-	<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
+	<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap2-toggle.min.css" rel="stylesheet">
+	<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap2-toggle.min.js"></script>
 
   <script  type="text/javascript" src="typeahead.min.js"></script>
   <script type="text/javascript">
@@ -37,7 +37,7 @@
 							<div class="form-group">
 								<input type="checkbox" checked data-toggle="toggle" data-on="Ready" data-off="Not Ready" data-onstyle="success" data-offstyle="danger">
 							</div>
-							
+
   						<div class="form-group">
 								<input id="myimmat" type="number" class="typeahead tt-query"  name="immat" placeholder="IMMAT" required>
 								<br>
