--- a/views/post_data.ejs
+++ b/views/post_data.ejs
@@ -6,17 +6,101 @@
 
   <script  type="text/javascript" src="typeahead.min.js"></script>
   <script type="text/javascript">
-	$(function(){
-			$('.typeahead').typeahead({
-					name: 'immat',
-					remote: 'http://localhost:8080/search?key=%QUERY',
-			});
-	});
+$(document).ready(function(){
+  $('#myimmat').typeahead({
+        hint: true,
+        highlight: true,
+        minLength: 1,
+        name: 'users',
+        remote: 'http://localhost:8080/search_immat?key=%QUERY',
+    });
+
+  });
+
+    $('.typeahead.input-sm').siblings('input.tt-hint').addClass('hint-small');
+    $('.typeahead.input-lg').siblings('input.tt-hint').addClass('hint-large');
 
   </script>
+
+
+  <style>
+      body {
+        padding: 40px;
+      }
+      .twitter-typeahead .tt-query, .twitter-typeahead .tt-hint {
+        margin-bottom: 0;
+      }
+      .twitter-typeahead .tt-hint {
+        display: block;
+        height: 34px;
+        padding: 6px 12px;
+        font-size: 14px;
+        line-height: 1.428571429;
+        border: 1px solid transparent;
+        border-radius:4px;
+      }
+      .twitter-typeahead .hint-small {
+        height: 30px;
+        padding: 5px 10px;
+        font-size: 12px;
+        border-radius: 3px;
+        line-height: 1.5;
+      }
+      .twitter-typeahead .hint-large {
+        height: 45px;
+        padding: 10px 16px;
+        font-size: 18px;
+        border-radius: 6px;
+        line-height: 1.33;
+      }
+      .tt-dropdown-menu {
+        min-width: 160px;
+        margin-top: 2px;
+        padding: 5px 0;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border: 1px solid rgba(0, 0, 0, .2);
+        *border-right-width: 2px;
+        *border-bottom-width: 2px;
+        -webkit-border-radius: 6px;
+        -moz-border-radius: 6px;
+        border-radius: 6px;
+        -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+        -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+        -webkit-background-clip: padding-box;
+        -moz-background-clip: padding;
+        background-clip: padding-box;
+      }
+      .tt-suggestion {
+        display: block;
+        padding: 3px 20px;
+      }
+      .tt-suggestion.tt-is-under-cursor {
+        color: #fff;
+        background-color: #0081c2;
+        background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+        background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+        background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+        background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+        background-repeat: repeat-x;
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0)
+      }
+      .tt-suggestion.tt-is-under-cursor a {
+        color: #fff;
+      }
+      .tt-suggestion p {
+        margin: 0;
+      }
+  </style>
+
+
 </head>
 
 <body>
+
+<h1 class='text-center' id='ss'> THIS IS A TEST </h1>
 
   <div class="container">
   <div class="col-md-4 col-md-offset-4">
@@ -32,12 +116,16 @@
       			<div class="form-group">
   						<input type="text" class="form-control" id="name" name="name" placeholder="Name" value=<%=user.username%> required>
   					</div>
+
   					<div class="form-group">
-  						<input type="number" class="form-control" id="mva" name="mva" placeholder="MVA" required>
+  						<input type="number" class="typeahead form-control" id="mva" name="mva" placeholder="MVA" required>
   					</div>
+
   					<div class="form-group">
-  						<input type="text" class="typeahead form-control" id="myimmat" name="immat" placeholder="Immatriculation" required>
+
+              <input type="text" id='myimmat' class="typeahead form-control" placeholder="Immat" />
   					</div>
+
   					<div class="form-group">
   						<input type="text" class="form-control" id="modele" name="modele" placeholder="Modèle" required>
   					</div>
@@ -59,6 +147,27 @@
           </div>
       </div>
       </div>
+        <button type="button" id="b" name="b" class="btn btn-primary pull-right">b</button>
+  <script>
+
+  $( '#b' ).click(function() {
+    var t=0;
+
+
+    $.ajax({
+      url: 'http://localhost:8080/search_mva?key='+$( '#myimmat' ).val()+'',
+      dataType: 'json',
+
+      success : function (data) {
+        $( '#ss' ).text(data);
+      },
+
+
+    });
+
+  });
+  </script>
+
 
 <h1>This is my form</h1>
 <!-- local host to be changed?  -->
