--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -2,9 +2,6 @@
 <html>
 <head>
 
-	<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap2-toggle.min.css" rel="stylesheet">
-	<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap2-toggle.min.js"></script>
-
   <script  type="text/javascript" src="typeahead.min.js"></script>
   <script type="text/javascript">
 	$(document).ready(function(){
@@ -34,10 +31,6 @@
 
 							</div>
 
-							<div class="form-group">
-								<input type="checkbox" checked data-toggle="toggle" data-on="Ready" data-off="Not Ready" data-onstyle="success" data-offstyle="danger">
-							</div>
-
   						<div class="form-group">
 								<input id="myimmat" type="number" class="typeahead tt-query"  name="immat" placeholder="IMMAT" required>
 								<br>
@@ -52,121 +45,117 @@
           		</div>
 
 							<div class="form-group">
-					    		<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Aspiration intérieur</label>
-					    			<div class="col-sm-8 col-md-8">
-					    				<div class="input-group">
-					    					<div id="radioBtn" class="btn-group">
-					    						<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
-					    						<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
-					    					</div>
-					    				<input type="hidden" name="happy" id="happy">
-					    			</div>
-					    		</div>
-					</div>
+								<input type="text" class="form-control" id="name" name="name" placeholder="Nom opérateur" required>
+							</div>
 
-					<div class="form-group">
-									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Lavage extérieur</label>
-									<div class="col-sm-8 col-md-8">
-										<div class="input-group">
-											<div id="radioBtn" class="btn-group">
-												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
-												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
-											</div>
-											<input type="hidden" name="happy" id="happy">
-										</div>
-									</div>
-					</div>
+							<div class="form-group">
+								<h3> Aspiration intérieure </h3>
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-primary active">
+										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+									</label>
+									<label class="btn btn-primary">
+										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+									</label>
+								</div>
+							</div>
 
-					<div class="form-group">
-									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Nettoyage vitre</label>
-									<div class="col-sm-8 col-md-8">
-										<div class="input-group">
-											<div id="radioBtn" class="btn-group">
-												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
-												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
-											</div>
-											<input type="hidden" name="happy" id="happy">
-										</div>
-									</div>
-					</div>
+							<div class="form-group">
+								<h3> Lavage extérieure </h3>
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-primary active">
+										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+									</label>
+									<label class="btn btn-primary">
+										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+									</label>
+								</div>
+							</div>
 
-					<div class="form-group">
-									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Nettoyage Pare-Brise intérieur</label>
-									<div class="col-sm-8 col-md-8">
-										<div class="input-group">
-											<div id="radioBtn" class="btn-group">
-												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
-												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
-											</div>
-											<input type="hidden" name="happy" id="happy">
-										</div>
-									</div>
-					</div>
+							<div class="form-group">
+								<h3> Nettoyage vitre </h3>
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-primary active">
+										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+									</label>
+									<label class="btn btn-primary">
+										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+									</label>
+								</div>
+							</div>
 
-					<div class="form-group">
-									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Niveau huile</label>
-									<div class="col-sm-8 col-md-8">
-										<div class="input-group">
-											<div id="radioBtn" class="btn-group">
-												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
-												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
-											</div>
-											<input type="hidden" name="happy" id="happy">
-										</div>
-									</div>
-					</div>
+							<div class="form-group">
+								<h3> Nettoyage parebrise intérieur </h3>
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-primary active">
+										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+									</label>
+									<label class="btn btn-primary">
+										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+									</label>
+								</div>
+							</div>
 
-					<div class="form-group">
-									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Niveau lave-glace</label>
-									<div class="col-sm-8 col-md-8">
-										<div class="input-group">
-											<div id="radioBtn" class="btn-group">
-												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
-												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
-											</div>
-											<input type="hidden" name="happy" id="happy">
-										</div>
-									</div>
-					</div>
+							<div class="form-group">
+								<h3> Niveau huile </h3>
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-primary active">
+										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+									</label>
+									<label class="btn btn-primary">
+										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+									</label>
+								</div>
+							</div>
 
-					<div class="form-group">
-					    		<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Pression pneus</label>
-									<div class="col-sm-8 col-md-8">
-					    			<div class="input-group">
-					    				<div id="radioBtn" class="btn-group">
-					    					<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
-					    					<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
-					    				</div>
-					    				<input type="hidden" name="happy" id="happy">
-					    			</div>
-					    		</div>
-					</div>
+							<div class="form-group">
+								<h3> Niveau lave-glace  </h3>
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-primary active">
+										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+									</label>
+									<label class="btn btn-primary">
+										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+									</label>
+								</div>
+							</div>
 
-					<div class="form-group">
-									<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Contrôle carosserie</label>
-									<div class="col-sm-8 col-md-8">
-										<div class="input-group">
-											<div id="radioBtn" class="btn-group">
-												<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
-												<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
-											</div>
-											<input type="hidden" name="happy" id="happy">
-										</div>
-									</div>
-					</div>
+							<div class="form-group">
+								<h3> Pression pneus </h3>
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-primary active">
+										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+									</label>
+									<label class="btn btn-primary">
+										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+									</label>
+								</div>
+							</div>
 
-					<div class="form-group">
-					    		<label for="happy" class="col-sm-4 col-md-4 control-label text-right">Contrôle intérieur</label>
-									<div class="col-sm-8 col-md-8">
-					    			<div class="input-group">
-					    				<div id="radioBtn" class="btn-group">
-					    					<a class="btn btn-primary btn-sm active" data-toggle="happy" data-title="Y">A faire</a>
-					    					<a class="btn btn-primary btn-sm notActive" data-toggle="happy" data-title="N">Ok</a>
-					    				</div>
-					    				<input type="hidden" name="happy" id="happy">
-					    			</div>
-					    		</div>
-					</div>
+							<div class="form-group">
+								<h3> Contrôle carrosserie </h3>
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-primary active">
+										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+									</label>
+									<label class="btn btn-primary">
+										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+									</label>
+								</div>
+							</div>
+
+							<div class="form-group">
+								<h3> Contrôle intérieur </h3> 
+								<div class="btn-group" data-toggle="buttons">
+									<label class="btn btn-primary active">
+										<input type="radio" name="options" id="option1" autocomplete="off" checked> Ok
+									</label>
+									<label class="btn btn-primary">
+										<input type="radio" name="options" id="option2" autocomplete="off"> À faire
+									</label>
+								</div>
+							</div>
+
 
           <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Envoyer</button>
           </form>
